//
//  AllEnums.swift
//  TestsProject
//
//  Created by Гузель on 09/05/2019.
//  Copyright © 2019 Гузель. All rights reserved.
//

import Foundation

enum Device {
    
    static let ipad = "iPad"
    static let iphone = "iPhone"
    static let all = "all"
}

enum TypeOfMedia {
    
    static let music = "music"
    static let movie = "movie"
    static let tvShow = "tvShow"
    static let podcast = "podcast"
    static let audiobook = "audiobook"
    static let software = "software"
}

enum AllConstants {
    
    static let trackName = "trackName"
    static let artistName = "artistName"
    static let description = "description"
    static let formattedPricet = "formattedPricet"
    static let price = "price"
    static let artworkUrl60 = "artworkUrl60"
    static let wrapperType = "wrapperType"
    static let trackViewUrl = "trackViewUrl"
    static let supportedDevices = "supportedDevices"
    static let empty = ""
    static let search = "Search"
    static let results = "results"
    static let cell = "Cell"
    static let main = "Main"
    static let settings = "settings"
}

enum NumberConstants {
    
    static let twoHundred = 200
    static let zero = 0
    static let one = 1
    static let two = 2
    static let three = 3
    static let four = 4
    static let five = 5
    static let hundred = 100
}
