...
                                    <segment title="iPad"/>
                                </segments>
                                <color key="tintColor" cocoaTouchSystemColor="viewFlipsideBackgroundColor"/>
                            </segmentedControl>
                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="lrP-ft-1Bz">
                                <rect key="frame" x="8" y="36" width="48" height="30"/>
                                <state key="normal" title="Cancel">
                                    <color key="titleColor" cocoaTouchSystemColor="darkTextColor"/>
                                </state>
                                <connections>
                                    <action selector="cancelAction:" destination="8Uf-cS-C8l" eventType="touchUpInside" id="pHP-Sg-gbd"/>
                                </connections>
                            </button>
...
